spiffy/spiffy.css
:root {
	/* TODO Use relative colors */
	--color-hsl: hsl(0 0% 10%);
	color-scheme: light dark;
}

*, ::before, ::after {
	box-sizing: border-box;
}

html {
	font: clamp(16px, .6rem + 1vw, 18px)/1.5 system-ui;
}

body {
	/*
	TODO Collapsible margins are important for content writing. Once margin-trim has browser support:
	  - Re-implement with CSS grid (https://www.joshwcomeau.com/css/full-bleed/).
	  - Restrict width using ch unit.
	*/
	max-inline-size: min(40rem + 1.4rem * 2, 100%);
	margin-inline: auto;
	margin-block: 3.6rem;
}

main > :not(img, table), footer > * {
	padding-inline: 1.4rem;
	margin-inline: auto;
	inline-size: min(36rem, 100%);
}

img::before {
	padding-inline: 1.4rem;
}

img {
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	block-size: auto;
	inline-size: 100%;
	margin-block: 2.8rem;
	font-style: italic;
	background: hsl(var(--color-hsl) / 0.05);
}

footer {
	margin-block: 2.8rem .9rem;
	text-align: center;
	font-size: .7rem;
}

address {
	font-style: normal;
}

.underline {
	text-decoration: underline;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-hsl: 0 100% 99%;
	}
}

